test of servo; not working

--- a/mbed_app.json
+++ b/mbed_app.json
@@ -6,7 +6,8 @@
             "platform.cpu-stats-enabled": true,
             "platform.thread-stats-enabled": true,
             "platform.sys-stats-enabled": true,
-            "platform.stdio-baud-rate": 115200
+            "platform.stdio-baud-rate": 115200,
+            "target.printf_lib": "std"
         }
     }
 }
